# foxess_hapa

./: .devcontainer.json  .gitignore  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  validate.yml
config/: configuration.yaml
custom_components/foxess_hapa/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  mock_api.py  number.py  select.py  sensor.py  services.py  services.yaml
custom_components/foxess_hapa/translations/: en.json
custom_components/ha_test01/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  number.py  select.py
custom_components/ha_test01/translations/: en.json
custom_components/integration_blueprint/: __init__.py  api.py  const.py  data.py  manifest.json  sensor.py  switch.py
custom_components/integration_blueprint/translations/: en.json
docs/: developer-guide.md  foxess-openapi-spec-v1.1.9-2026-01-09.md
scripts/: devcontainer_post_create.sh  develop  setup
