[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/foxess_hapa"]

[project]
name = "ha_test01"
version = "0.1.0"
description = "Home Assistant custom component integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.2"
dependencies = [
    "colorlog==6.10.1",
    "homeassistant==2025.12.5",
    "go2rtc-client>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pip>=21.3.1",
    "ruff==0.15.4",
]

[tool.ruff]
# The contents of this file is based on https://github.com/home-assistant/core/blob/dev/pyproject.toml
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL",
]

ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25
